Heroku-specific additions
- Added pom.xml with Jetty-runner dependency
- Added Procfile
- Added system.properties

Modified ajaxexample.html to use a relative URL
to enable calling home without having to know
the hostname

--- a/JavaScript-Example/js-example/src/main/webapp/ajaxexample.html
+++ b/JavaScript-Example/js-example/src/main/webapp/ajaxexample.html
@@ -19,7 +19,7 @@ xmlhttp.send();
 }
 function myFunction()
 {
-loadXMLDoc("http://localhost:8080/js-example/app/path/helloworld-resource/",function()
+loadXMLDoc("/app/path/helloworld-resource/",function()
   {
   if (xmlhttp.readyState==4 && xmlhttp.status==200)
     {
